Mini SQL Query Change Log
=========================

2015-01-21	FIX: Fixed issue where template host not creating data object
2014-08-22	ENH: Improved the find object design (ALT+F) - added up/down checks for a list etc
2014-08-07	ENH: Made SQLite a first class Mini SQL Query Citizen
2014-07-29	ENH: Modified the IoC to be Ninject
2013-03-06	ENH: Improved the grid setting of column widths, more so for larger text fields
2012-07-11	FIX: First use - no connection strings defined - 'Query' menu causes an error (Work Item 9488)
2012-07-02	FIX: Don't automatically refresh as it can try to reconnect to a connection you don't have etc
2011-11-02	ENH: Updated 3rd party libraries to latest with NuGet etc
2011-06-11	ENH: Added a Most Recently Used file list
2011-06-03	ENH: Added Row counts to the query (per tab) and table view windows
2011-04-19	ENH: Added the Command Timout option, only valid for MSSQL for now
2011-03-30	ENH: Added in the ExportSqlCe version 4 tool
2011-03-30	ENH: Upgraded the Contrib projects to VS 2010
2011-03-29	FIX: The schema service factory was too specific with the SQL CE versions, now works with 3.5 of 4 etc.
2010-08-09	ENH: Made exporting with "read only columns" (e.g. PK's) an option
2010-01-28	ENH: Added a 'copy table name' menu item on the DB Inspector
2010-01-28	ENH: Friendlier truncate table message
2010-01-15	ENH: Added a "SELECT COUNT(*)" option for tables and views
2009-12-18	ENH: Added a bit of a hack of an 'export data' functionality via the 'view table data' option (see 'Export Script...' link under 'Reload Data')
2009-12-10	ENH: quick change to include the column name in the comment of the generated insert sql code
2009-10-06	MOD: Removed all obsolete references in prep for a real release ;-O
2009-09-24	ENH: Finally added drag drop ;-)
2009-09-24	ENH: Added options.
2009-09-22	ENH: added a simple file watcher mechanism to monitor the templates directory (*.mt) and update the tree view.