@@ -1,6 +1,7 @@
 Mini SQL Query Change Log
 =========================
 
+2015-01-22	ENH: Added a "Cancel" implementation - provider specific of course!
 2015-01-21	FIX: Fixed issue where template host not creating data object
 2014-08-22	ENH: Improved the find object design (ALT+F) - added up/down checks for a list etc
 2014-08-07	ENH: Made SQLite a first class Mini SQL Query Citizen
